# ai-soc-investigator

./: .gitignore  5.3.0_API.json  README.md  ai_agent.py  api_client.py  auth.py  case_collector.py  case_selection_agent.py  config.py  coordination_agent.py  coordinator_agent.py  investigation_agent.py  mock_supabase.py  notification_agent.py  openai_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup.py  setup_env.example.py  slack_notifier.py  supabase_client.py  test_advanced_agents.py  test_agent_system.py  test_api.py  test_auth.py  test_case.json  test_case_collector.py  test_config.py  test_coordinator.py  test_slack_notifications.py
migrations/: create_cases.sql  create_decision_metrics.sql
scripts/: process_cases.py
src/: __init__.py
src/agents/: __init__.py  ai_agent.py  decision_agent.py
src/agents/base/: __init__.py  base_agent.py
src/agents/registry/: __init__.py  agent_registry.py  v2.py
src/agents/specialized/: __init__.py  case_handler.py  data_processor.py
src/agents/supervisor/: __init__.py  agent_supervisor.py
src/clients/: api_client.py  auth.py  supabase_client.py
src/config/: __init__.py  settings.py
src/utils/: __init__.py  rate_limiter.py  retry.py
tests/: conftest.py  test_case_processing.py  test_decision_agent.py  test_error_handling.py  test_migrations.py
tests/integration/: test_agent_system.py
tests/unit/: test_rate_limiter.py
tests/unit/agents/: __init__.py  test_data_processor.py
